feat: Add logging
- Add event logging to application
- Rework error handling so sensitive error messages are not displayed
- Fix renaming of network format and device type

--- a/web_application/templates/devices/update_device.html
+++ b/web_application/templates/devices/update_device.html
@@ -19,8 +19,8 @@
             </div>
             <br>
             <div class="form-floating">
-                {{form.type(class="form-control", placeholder="")}}
-                {{form.type.label}}
+                {{form.device_type(class="form-control", placeholder="")}}
+                {{form.device_type.label}}
             </div>
             <br>
             <div class="form-floating">
