--- a/web_application/templates/networks/list_networks.html
+++ b/web_application/templates/networks/list_networks.html
@@ -38,7 +38,7 @@
                 <td>{{network["name"]}}</td>
                 <td>{{network["datatype"]}}</td>
                 <td>{{network["provenance"]}}</td>
-                <td>{{network["format"]}}</td>
+                <td>{{network["network_format"]}}</td>
                 <td>{{network["date_added"]}}</td>
                 <td>{{network["last_run"]}}</td>
             </tr>
