--- a/web_application/templates/devices/add_device.html
+++ b/web_application/templates/devices/add_device.html
@@ -26,8 +26,8 @@
             </div>
             <br>
             <div class="form-floating">
-                {{form.type(class="form-control", placeholder="")}}
-                {{form.type.label}}
+                {{form.device_type(class="form-control", placeholder="")}}
+                {{form.device_type.label}}
             </div>
             <br>
             <div class="form-floating">
