--- a/web_application/templates/devices/list_devices.html
+++ b/web_application/templates/devices/list_devices.html
@@ -37,7 +37,7 @@
             {% for device in devices %}
             <tr>
                 <td>{{device["name"]}}</td>
-                <td>{{device["type"]}}</td>
+                <td>{{device["device_type"]}}</td>
                 <td>{{device["os"]}}</td>
                 <td>{{device["ip"]}}</td>
                 <td>{{device["date_added"]}}</td>
