--- a/web_application/templates/networks/update_network.html
+++ b/web_application/templates/networks/update_network.html
@@ -31,8 +31,8 @@
             </div>
             <br>
             <div class="form-floating">
-                {{form.format(class="form-control", placeholder="")}}
-                {{form.format.label}}
+                {{form.network_format(class="form-control", placeholder="")}}
+                {{form.network_format.label}}
             </div>
             <br>
             <div class="row">
